--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/src/static/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.9a5d2009.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.dc0786a6.js">
-    <link rel="stylesheet" href="/assets/index.5db4ac8b.css">
+    <script type="module" crossorigin src="/bookshelf/assets/index.9a5d2009.js"></script>
+    <link rel="modulepreload" href="/bookshelf/assets/vendor.dc0786a6.js">
+    <link rel="stylesheet" href="/bookshelf/assets/index.5db4ac8b.css">
   </head>
   <body>
     <div id="root"></div>
