--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/src/static/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/bookshelf/assets/index.7c6b0e2e.js"></script>
-    <link rel="modulepreload" href="/bookshelf/assets/vendor.29acef5d.js">
-    <link rel="stylesheet" href="/bookshelf/assets/index.f2cb17e5.css">
+    <script type="module" crossorigin src="/bookshelf/assets/index.d6ab62d0.js"></script>
+    <link rel="modulepreload" href="/bookshelf/assets/vendor.fb339693.js">
+    <link rel="stylesheet" href="/bookshelf/assets/index.0e681f98.css">
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      const global = globalThis;
+    </script>
     
   </body>
 </html>
